--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
+    "framer-motion": "^10.15.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
